--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,10 @@ target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
+src/main/resources/static
+yarn.lock
+node_modules/*
+./mvnw/*
 
 ### STS ###
 .apt_generated
