--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,11 @@
 spring.application.name=indie-book
 server.port=8880
-
 spring.datasource.url=jdbc:postgresql://${S_POSTGRES_HOST:localhost}:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=postgres
+spring.data.mongodb.authentication-database=admin
+spring.data.mongodb.username=mongo
+spring.data.mongodb.password=mongo
+spring.data.mongodb.database=texts
+spring.data.mongodb.port=27017
+spring.data.mongodb.host=localhost
