--- a/package.json
+++ b/package.json
@@ -12,15 +12,21 @@
     "babel-loader": "^8.1.0",
     "css-loader": "^5.0.0",
     "html-webpack-plugin": "^4.5.0",
+    "prop-types": "^15.7.2",
     "style-loader": "^2.0.0",
     "webpack": "^5.1.3",
-    "webpack-cli": "^4.0.0"
+    "webpack-cli": "^4.0.0",
+    "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
     "react": "^16.14.0",
-    "react-dom": "^16.14.0"
+    "react-dom": "^16.14.0",
+    "react-router-dom": "^5.2.0"
   },
   "scripts": {
+    "dev": "webpack serve --hot",
     "start": "webpack --mode development --watch",
     "build": "webpack --mode production"
   }
