--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "path-browserify": "^1.0.1",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
-    "react-router-dom": "^5.2.0"
+    "react-remarkable": "^1.1.3",
+    "react-router-dom": "^5.2.0",
+    "react-simplemde-editor": "^4.1.3"
   },
   "scripts": {
     "dev": "webpack serve --hot",
