--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "path-browserify": "^1.0.1",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
+    "react-mui-multiselect-dropdown": "^1.0.3",
     "react-remarkable": "^1.1.3",
     "react-router-dom": "^5.2.0",
+    "react-select-plus": "^1.0.0-rc.3.patch12",
     "react-simplemde-editor": "^4.1.3"
   },
   "scripts": {
