--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-remarkable": "^1.1.3",
     "react-router-dom": "^5.2.0",
     "react-select-plus": "^1.0.0-rc.3.patch12",
-    "react-simplemde-editor": "^4.1.3"
+    "react-simplemde-editor": "^4.1.3",
+    "use-state-with-callback": "^2.0.3"
   },
   "scripts": {
     "dev": "webpack serve --hot",
